Fixed issue with spacing on email viewer

--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -59,6 +59,6 @@ body {
     color: #ccc;
 }
 
-h1, p, ul, ol {
-    margin: 0;
-}
+/*h1, p, ul, ol {*/
+/*    margin: 0;*/
+/*}*/
